--- a/assinment-1(8).html
+++ b/assinment-1(8).html
@@ -16,6 +16,11 @@
 
     let c = Number(prompt('enter temparature in celcious'))
 
+
+    console.log(c);
+
+    console.log("celcious");
+    
     console.log(f = (c * 9 / 5 + 32));
 
     console.log("fahrenheit");
